--- a/index.html
+++ b/index.html
@@ -4,25 +4,25 @@
         <title>Anthony's Website</title>
     </header>
 
-    <body>
+    <body bgcolor="#AAF999">
         <center>
-            <h1>Engineering Website</h1>
+            <marquee><h1>Engineering Website</h1></marquee>
             <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ4m_YBW1QCy2Y2_GBP7kZpO7RbcZ9hg4QKiF5-Ai1P&s" width="400px" height="200px">
         </center>
         
         <hr><br><br>
 
         <p>
-            8/20/23 - This is my first journal entry! 
+            <b>8/25/23</b> - This week I made this website and leared how to upload it to the internet. I learned about the saftey precautions and engineering steps. We tried to roll a marble into a cup. I dont know what I am doing this weekend. 
             <br>
-            <a href="https://letmegooglethat.com/?q=best+website">My Favorite Website</a>
+            <a href="https://www.allrecipes.com/recipe/72657/best-hamburger-ever/">My Favorite Recipe</a>
         </p>
 
         <p>
-            8/21/23 - This is my second journal entry
+            <b>9/1/23</b> - This week I learned engineering discipline and that you must be safe during dangerous processes. I was at a wedding this week and missed the challenge. I ate good food.
+            <img src="Marbles.jpg" width="180px" height="120px">
+            
         </p>
     </body>
 
 </html>
-template.txt
-Displaying template.txt.
