--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
         <p>
             <b>9/1/23</b> - This week I learned engineering discipline and that you must be safe during dangerous processes. I was at a wedding this week and missed the challenge. I ate good food.
             <img src="Marbles.jpg" width="180px" height="120px">
+            <br>
+             <b>9/6/23</b> - My week went well. I learned about CAD and designed things. My rube goldberg machine will pop a balloon. The most challenging parts is the construction of the machine.
+             <img src="Rube.jpg" width="180px" height="120px">
+
             
         </p>
     </body>
