--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
         <title>Anthony's Website</title>
     </header>
 
-    <body bgcolor="#AAF999">
+    <body bgcolor="#BOB420">
         <center>
-            <marquee><h1>Engineering Website</h1></marquee>
+            <marquee><marquee><marquee><marquee><h1>Engineering Website</h1></marquee></marquee></marquee></marquee>
             <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ4m_YBW1QCy2Y2_GBP7kZpO7RbcZ9hg4QKiF5-Ai1P&s" width="400px" height="200px">
         </center>
         
@@ -20,12 +20,29 @@
 
         <p>
             <b>9/1/23</b> - This week I learned engineering discipline and that you must be safe during dangerous processes. I was at a wedding this week and missed the challenge. I ate good food.
+            <br>
             <img src="Marbles.jpg" width="180px" height="120px">
             <br>
-             <b>9/6/23</b> - My week went well. I learned about CAD and designed things. My rube goldberg machine will pop a balloon. The most challenging parts is the construction of the machine.
-             <img src="Rube.jpg" width="180px" height="120px">
-
-            
+             <b>9/8/23</b> - My week went well. I learned about CAD and designed things. My rube goldberg machine will pop a balloon. The most challenging parts is the construction of the machine.
+             <br>
+             <img src="Rube.jpg" width="200px" height="150px">
+<br>       
+            <video width="600" height="400" controls="" loop="">
+                <source src="rubevid.mp4" type="video/mp4">
+            </video>    
+             <b>9/15/23</b> - This week we finished our project. It took a few tries for it to work successfully but overall it was good. We had multiple different challenges includng the car which would get stuck frequently. But overall it was a good chalenge and was fun.
+             <img src="goof.jpg" width="180px" height="120px">
+             <br>
+             <br>
+             <b>9/22/23</b> - This week we did multiple challenges. We made a boat. We also cut out E shapes in paper and had to accuratley follow measurments.
+             <br>
+             <br>
+             <b>9/28/23</b> - This week I learned about computer engineering. I learned about components of computers and got to take one apart. It was very informative and I learned alot about how computers fuctions and how the individual parts work together. 
+             <br>
+             <img src="deskfart.jpg" width="150px" height="120px">
+             <br>
+             <br>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/aXOWvYcdppQ?si=F_nO0auaKa3a-fuL" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </p>
     </body>
 
