--- a/index.html
+++ b/index.html
@@ -41,6 +41,11 @@
              <br>
              <img src="deskfart.jpg" width="150px" height="120px">
              <br>
+             <b>9/28/23</b> - I learned that there is different types of bioengineering, I also learned that bioengineering is made up of alot of different types of engineering. Our hand project was a very fun project, we were successful in making a prosthetic hand using strings and rubber bands. If I were to make the hand again I would add more fingers.
+<br>
+              <video width="600" height="400" controls="" loop="">
+                <source src="hand.mp4" type="video/mp4">
+            </video>  
              <br>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/aXOWvYcdppQ?si=F_nO0auaKa3a-fuL" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </p>
