--- a/index.html
+++ b/index.html
@@ -46,17 +46,31 @@
             <b>10/13/23</b> - We learned about aerospace engineering. Four forces on a flying object are weight, life, thrust and drag. This class is very fun!  <a href="https://docs.google.com/spreadsheets/d/1Dg0XoXWLx6bd5fkp_gjhs3JBT4UhHizLkVlP34FiE0w/edit#gid=0">BOM</a> 
             <img src="rocket.png" width="200px" height="150px">
             <br>
-            <b>20/10/23</b> - I learned alot about aerospace engineering this week. I learned about the different types of aerospace engineering and the four forces on a aircraft. My bottle rocket was designed poorly, the wings were backwards and the railing was not attached well.
+            <b>10/20/23</b> - I learned alot about aerospace engineering this week. I learned about the different types of aerospace engineering and the four forces on a aircraft. My bottle rocket was designed poorly, the wings were backwards and the railing was not attached well.
             <br>
-            <b>26/10/23</b> - This week we learned about enviromental engineering and the enviroment. We made water filters that replicate real life water filtration systems.
+            <b>10/26/23</b> - This week we learned about enviromental engineering and the enviroment. We made water filters that replicate real life water filtration systems. Our water filtration system worked well and filtered dirty water into somewhat clean water. This threeday weekend I am going to relax.
             <br>
              <img src="filter.png" width="200px" height="300px">
               <video width="600" height="400" controls="" loop="">
                 <source src="hand.mp4" type="video/mp4">
             </video>  
              <br>
+             <b>11/3/23</b> - This week I learned about electrical components as well as circuits. It was very interesting to create electrical circuits in tinkercad. Three fun facts are that electricity runs at the speed of light. Another thing I learned is that you have to use math when you're picking the resistance of a resistor. Finally, a fun fact is that the inventor of electrical engineering is James Clerk Maxwell.
+             <img src="circuit.png" width="200px" height="150px"
+            <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vR4of20245boYspIrXOVfepoLu4eYTdlXdTTBMj4R_qcfe4Kt5KjSI5Ybw6gUgEUiHMQSWM30bC53RO/embed?start=false&loop=false&delayms=3000&quot; frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/aXOWvYcdppQ?si=F_nO0auaKa3a-fuL" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-        </p>
+            <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vR4of20245boYspIrXOVfepoLu4eYTdlXdTTBMj4R_qcfe4Kt5KjSI5Ybw6gUgEUiHMQSWM30bC53RO/embed?start=false&loop=false&delayms=3000&quot; frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+            <b>11/9/23</b> - Over the last 2 weeks i learned alot about electrical engineering and constructing electrical cicuits.
+            <br>
+            <b>1/26/24</b> - We made non-newtonian fluid and it was really cool. We also started making a arduino car in tinkercad here is a pic:
+            <img src="circuit.png" width="200px" height="150px"
+            <br>
+            <b>2/5/24</b> - We started constructing the physical car and got the wheels spinning on the breadboard. We also did a lot of soldering of the wires. My goal is to have completed the actual circuit by friday so we can begin construction of the base. Fun fact about my weekend is that I had was chilling.
+            <br>
+            <b>2/13/24</b> - This week we finished assembling all the components of the car. We completed the body and wheels. This upcoming week we are going to fine tune the car and make it as good as possible.
+            <img src="whip.png" width="200px" height="150px"
+         </p>   
+        
     </body>
 
 </html>
