--- a/index.html
+++ b/index.html
@@ -64,11 +64,15 @@
             <br>
             <b>1/26/24</b> - We made non-newtonian fluid and it was really cool. We also started making a arduino car in tinkercad here is a pic:
             <img src="circuit.png" width="200px" height="150px"
-            <br>
+                <br>
+                <br>
             <b>2/5/24</b> - We started constructing the physical car and got the wheels spinning on the breadboard. We also did a lot of soldering of the wires. My goal is to have completed the actual circuit by friday so we can begin construction of the base. Fun fact about my weekend is that I had was chilling.
             <br>
             <b>2/13/24</b> - This week we finished assembling all the components of the car. We completed the body and wheels. This upcoming week we are going to fine tune the car and make it as good as possible.
-            <img src="whip.png" width="200px" height="150px"
+                <br>
+                <br>
+            <b>2/26/24</b> - Our car did well, it drove decent but the wheels were uneven causing it to turn right. IF i were to remake it I could make the body better and cleaner.
+            <img src="ca.png" width="200px" height="150px"
          </p>   
         
     </body>
