--- a/index.html
+++ b/index.html
@@ -95,6 +95,10 @@
            <br>
            <br>
            <b>4/26/24</b> - In the past two weeks I have designed my boat and started the construction. I have built the base layer and completed it. I forsee challenges down the road with the walls of my boat. I am excited to test it out in the pool! Hooray! I made the base of the boat multi layered to help support my weight. I made it three layers of cardboard. A sterotype I've faced is sometimes I get followed around by the cashier in 7/11 because they think im going to steal.
+         <br>
+         <br>
+         <b>5/6/24</b> - I finsihed puitting up the walls for the boat now I just need to add final touches and whatnot. So far i have no concerns on the progress of my vessel. Im am confident is the stablitity of the cardboard. I used multiple layers of cardboard to suppport my weight. I am also confident in its ability to keep water out. I made a waterproof layer of tape across all the gaps between panels of cardboard. I have no worries and I am confindent that my boat is gonna win first place. HOORAY!!!!Its looking pretty chill. I like apple juice over orange juice because apple juice is more refreshing and tasted better.
+         
         <br>
                                 <img src="cad.png" width="200px" height="150px"
     </body>
